Chore: fix footer text-align (#120)

--- a/src/components/NewsletterForm/NewsletterForm.module.css
+++ b/src/components/NewsletterForm/NewsletterForm.module.css
@@ -5,6 +5,7 @@
   gap: 1rem;
   width: 100%;
   height: 100%;
+  text-align: center;
 
   & > button {
     flex: 1;
